remote files and info publication

--- a/www/templates/config.html
+++ b/www/templates/config.html
@@ -14,7 +14,7 @@
 		<i class="icon ion-ios-email-outline"></i>	
 		{{$root.user.email}}
 	</div>
-	<a class="item " onclick="alert('测试期间禁用密码修改!')">
+	<a class="item " ng-click="chgpwd()">
 		<i class="icon ion-ios-locked-outline"></i>	
 		修改密码
 	</a>
