--- a/www/templates/info-content.html
+++ b/www/templates/info-content.html
@@ -1,6 +1,6 @@
 <ion-view view-title="资讯">
 <ion-content>
-<div class="card scroll" ng-if="compare(1)" >
+<div class="card scroll" ng-if="iId" >
     <div class="item grey-line">
         <div class="row force-no-padding">
             <div class="col avatar-frame-small force-no-padding">
@@ -10,7 +10,7 @@
                     </div>
                     <div class="col force-no-padding-left15">
                         <div class="row force-no-padding">
-                            校车时刻表
+                            {{post.title}}
                         </div>
                         <div class="row force-no-padding-top10">
                             <!-- <p>{{message.senderName}} &nbsp;&nbsp;&nbsp;{{message.time| date:'yyyy-MM-dd HH:mm:ss '}}</p> -->
@@ -21,601 +21,7 @@
             </div>
         </div>
     </div>
-    <div class="item item-text-wrap">
-        <pre>
-线路1：中山北路校区往返闵行校区
-1．中山北路校区开往闵行校区（周一至周五）：
-    A、中山北路校区停车场开往闵行校区：6：50、8：30、11：50、13：50、16：50 、20：50
-    B、金沙江路师大艾骑驾驶员培训部开往闵行校区： 6：50
-2．闵行校区开往中山北路校区（周一至周五）：
-    秋实阁候车亭开往中山北路校区：6：40（6:20始发枫桦景苑小区西门）、10：00、12：45、15：00、16 ：40、17：30、19：50（周五停发）、20：55、22：10
-3．中山北路校区往返闵行校区（周六、周日）：
-    A、中山北路校区停车场开往闵行校区： 7：30
-    B、闵行校区秋实阁候车亭开往中山北路校区： 16：30
- 
-
-线路2：上海南站往返闵行校区
-1．上海南站开往闵行校区（周一至周五）： 7：00、9：00、12：00、14：10、17：00
-2．闵行校区开往上海南站（周一至周五）： 6：15、 10：00、12：45、15：00、16：40、17：30、19：50（周五停发）、20：55
-3．闵行校区往返上海南站（周六、周日）：
-    A、闵行校区开往上海南站： 8：30、12：00、14：45
-    B、上海南站开往闵行校区： 9：30、13：00、15：30
- 
-
-线路3：闵行校区往返轨道交通5号线东川路站
-闵行校区往返轨道交通5号线东川路站班车，每周一至周五运行，每天运行10个班次。周六、周日、寒暑假、节假日停止运行。
-     A、闵行校区秋实阁旁候车亭开往5号线东川路站：7：00、 9：00、12：00、14：00、16：00
-     B、5号线东川路站（石屏路）开往闵行校区：7：30、9：30、12：30、14：30、16：30
-联系电话：62232245（中北）；54345294（闵行）            
-        </pre>
-    </div>
-</div>
-<div class="card scroll" ng-if="compare(2)" >
-    <div class="item grey-line">
-        <div class="row force-no-padding">
-            <div class="col avatar-frame-small force-no-padding">
-                <div class="row force-no-padding">
-                    <div class="col-fixed-40 force-no-padding">
-                        <img ng-src="img/default.png">
-                    </div>
-                    <div class="col force-no-padding-left15">
-                        <div class="row force-no-padding">
-                            办公电话
-                        </div>
-                        <div class="row force-no-padding-top10">
-                            <!-- <p>{{message.senderName}} &nbsp;&nbsp;&nbsp;{{message.time| date:'yyyy-MM-dd HH:mm:ss '}}</p> -->
-                            2015-12-14
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="item item-text-wrap">
-        <pre>
-1.校内电话直拨5位分机号。闵行校区电话分机号第一位为“8”，中山北路分机号第一位为“6”。
-2.闵行校区电话局号“5434”，中山北路校区为“6223”。市话先拨“0”，国内长途拨“00”。
-3.闵行校区通讯业务联系电话为“82619”，中山北路校区通讯业务联系电话为“62408”。
-4.中山北路校区总机为“62233333”，查询电话为“63333”或者“63334”。        
-
-A   
-
-B 
-保卫处 
-处长室 85207
-副处长室    82649
-报警接待室   85308
-值班室 82653
-治安科 82651
-户政科 82652
-消防科 82675
-政保科 85210
-办公室 84044
-武装部 84878
-监控中心1室  85208
-监控中心2室  85209
-莲花路警卫室  64501105
-虹梅路警卫室  34293203
-研究生公寓警卫室    82778
-
-
-C 
-财务处 
-处长室 84648
-84618
-副处长室    84787
-84616
-财务大厅    84668
-84658
-84638
-会计档案室   84684
-机要室 84694
-计划管理办公室 84784
-84628
-
-
-D 
-东方房地产学院 
-院长办公室   83900
-院办公室    83901
-总支办公室   83898
-教务办公室   81048
-团委、学生管理办公室  80964
-党校  
-党校办公室   84659
-对外联络与发展规划处  
-办公室 52135094
-54345217
-档案馆 
-办公室 84933
-83079
-
-
-E   
-
-F 
-法律系 
-办公室 84588
-83995
-房改办公室   
-办公室 84051
-基金办公室   84050
-
-
-G 
-古籍整理研究所 
-所长办公室   85055
-办公室 85056
-85057
-国际交流处   
-办公室 84690
-84687
-84618
-
-
-H
- 后勤保障部  
-中北办公室   85238
-传真  54345238
-闵行办公室   62126
-传真  62602044
-华大集团    
-办公室 82602
-华申公司    
-公司办公室   63518
-国际交流服务中心    63520
-百花园餐厅   63723
-银之春西餐厅  63502
-学术交流中心  62601058
-申云轩餐厅   63195
-教师之家宾馆（闵行校区）    33503666
-申云轩餐厅（闵行校区） 33503777
-物业管理中心  65035
-化学系 
-党政办公室   84860
-办公室 82807
-教务办公室   82806
-辅导员办公室  82805
-
-
-I   
-
-J 
-基建处 
-处长室 85226
-副处长室    85219
-办公室 85227
-传真  54345205
-计划办公室   85221
-施工办公室   85228
-财务办公室   85224
-资料室 85225
-计算机中心   
-办公室 80842
-金融与统计学院 
-办公室 85058
-就业中心    
-办公室 82615
-85052
-纪委  
-纪委办公室   84605
-84651
-84613
-84613
-机关党委    
-办公室 84715
-84715
-信访办公室   84705
-84725
-教务处 
-处长办公室   84776
-84779
-84756
-行政办公室   84622
-84642
-84762
-84771
-84781
-办公室 84781
-84782
-84792
-教学研究办公室 84769
-实践教学办公室 84786
-基础教育办公室 84724
-84744
-高师培训教师进修办   84759
-
-
-K
-科技处 
-办公室 85095
-85097
-85099
-
-L 历史学系  
-行政办公室   82643
-辅导员办公室  82642
-教务办公室   82641
-
-
-M
-闵行校区大楼教师、通讯服务中心    
-经理办公室   82617
-数统楼物业办公室    82619
-数统楼警卫室  82611
-人文学院物业办公室   82715
-人文学院警卫室 83993
-法商楼警卫室  83446
-物理信息楼物业办公室  85103
-物理楼警卫室  85105
-信息楼警卫室  85106
-第一教学楼   81281
-第一教学楼警卫室    83261
-第二教学楼   83788
-第三教学楼   82320
-第四教学楼   82323
-维修组 83263
-通讯业务    83263
-闵行校区学生宿舍服务中心    
-经理办公室   82760
-54342732
-本科生公寓1号楼物业办公室   84872
-84873
-本科生公寓1号楼值班室 84038
-2号楼值班室  84039
-3号楼值班室  83806
-4号楼值班室  84037
-5号楼值班室  83990
-6号楼值班室  83991
-研究生公寓1号楼值班室 84175
-2号楼值班室  82766
-3号楼值班室  82767
-4号楼值班室  82722
-5号楼值班室  82711
-6号楼值班室  82710
-7号楼值班室（南）   81026
-7号楼值班室（北）   82769
-8号楼值班室（南）   82770
-8号楼值班室（北）   81539
-9号楼值班室（南）   82712
-9号楼值班室（北）   82721
-11号楼值班室 82188
-12号楼值班室 82388
-13号楼值班室 82588
-14号楼值班室 82688
-15号楼值班室 83984
-16好楼值班室 83985
-17号楼值班室 83986
-青年教师公寓值班室   85300
-闵行校区膳食服务中心  
-华闵餐厅经理办公室   82309
-财务室 82305
-华闵餐厅一楼  82304
-华闵三楼教工餐厅    82317
-秋实阁一楼办公室    84047
-秋实阁小卖部  84048
-秋实阁二楼服务台    84920
-华闵餐厅文印室 85091
-
-
-N   
-
-
-O   
-
-
-P   
-
-
-Q 
-勤工助学中心  
-家教部 82669
-贷款办 82302
-市场部 82670
-办公室 82650
-财务室 82312
-物业办公室   80769
-水站  82616
-秋林阁餐厅   
-闵行校区秋林阁 82720
-82779
-82789
-
-
-R 
-人事处
-处长办公室   84650
-副处长室    84672
-人事档案办公室 84652
-人才中心办公室 84745
-师资办公室   84727
-84737
-薪酬办公室   84738
-84832
-人事调配办公室 84755
-84765
-综合福利办公室 84612
-84722
-
-
-S
-设备处
-处长室 85266
-副处长室    85277
-实验管理办公室 85241
-85245
-物资供应办公室 85218
-85242
-85246
-办公室 82490
-综合机房    85247
-综合库房    84909
-传真  54345248
-社会学系
-办公室 85043
-85044
-85045
-85046
-商学院
-商学院办公室  84013
-84014
-数学系
-主任办公室   82634
-总支办公室   82625
-副系主任（教学）    83989
-办公室 82609
-总支副书记   82633
-辅导员办公室  82628
-团学联 82635
-机房  82646
-资料室 82632
-研究生教务   84910
-本科生教务   82818
-社科部
-社科部办公室  84930
-办公室 85061
-85062
-生命科学学院
-党政办公室   82603
-院办公室    82605
-辅导员办公室  84149
-教务办公室   82604
-团学联 82622
-微生物及发酵实验室   84865
-细胞、免疫、植物生理和遗传实验室    84866
-实验教学中心办公室   84867
-生化与分子生物学实验室 84127
-动物生理学实验室    84130
-显微镜及仪器室 84129
-动物学、学科教育及普通生物学实验室   84128
-主任室 84126
-机房  84868
-生命医学研究所办公室  84030
-社科处
-办公室 5118
-5126
-生乐物业华师大管理部
-实验 A 楼  83626
-83627
-审计处
-处长室 84760
-副处长室    84761
-财务审计处   84701
-工程审计处   84700
-思勉人文高等研究院   
-办公室 
-85286
-85090
-传真： 
-85087
-图书馆 85288
-
-
-T 
-体育与健康学院
-院长办公室   85131
-公体教务办公室 82613
-辅导员办公室  82612
-图书馆
-馆长室 85080
-总支书记室   85077
-副馆长室    85071
-85072
-85079
-馆办公室    84880
-85073
-82325
-总服务台    84881
-一楼样本书库服务台   85066
-三楼服务台   84886
-四楼服务台   84883
-五楼服务台   85065
-电子阅览室   84882
-媒体资源部   83805
-文献编撰中心  85074
-系统媒体中心（自动化部办公室） 84889
-古籍特藏部   85069
-流通阅览部   84885
-情报部（业务咨询）   84887
-流通阅览部典藏室    85068
-采访部 85070
-编目部 85120
-传真  54342325
-心中书社    54340253
-翔华书店    85204
-团委
-办公室 82654
-82667
-82697
-学生会社团联合会    82314
-校艺术团办公室 83998
-统战部
-统战部办公室  84603
-84703
-
-
-U   
-
-
-V   
-
-
-W 
-物理系
-总支办公室   84870
-教务办公室   82730
-辅导员办公室  82731
-外语学院
-党委办公室   84894
-84926
-院长办公室   84898
-副院长办公室  84901
-84927
-院办公室    84891
-研究生办公室  84925
-院教务（ 1 ）    84892
-院教务（ 2 ）    84893
-辅导员办公室  84895
-84896
-英语系 84924
-俄语系 84899
-日语系 84900
-德语系 84904
-法语系 84905
-大学英语教学部 84903
-资料室 84906
-院电教 84897
-培训部 82904
-警卫室 84928
-[返回]
-X
-学校办公室
-学校办公室 505   84805
-84815
-84835
-学校办公室 507   84801
-84811
-84836
-文印室 508 84688
-学校办主任室 509  84826
-办公楼 511 84806
-503 84808
-501 84818
-417 84828
-415 84809
-413 84819
-411 84829
-419 84812
-84822
-416 84609
-84619
-学校传真    84800
-总值班室 106    84633
-84699
-收发室 82600
-82601
-校医院
-办公室 81538
-值班室 81025
-预防保健室   85230
-信息化办公室
-办公室 83080
-83081
-83082
-传真  84985
-信息科学技术学院
-副书记办公室  85223
-院长办公室   85107
-副院长办公室  85109
-85116
-电子系主任办公室    85113
-计算机系主任办公室   85115
-院办公室    82726
-研究生教务办公室    85220
-本科生教务办公室    82728
-85112
-辅导员办公室  82088
-82729
-院团委 85155
-院资料室    85197
-心理咨询中心
-办公室 85092
-85093
-宣传部
-宣传部部长室  84746
-84766
-办公室 84718
-84794
-校报  84716
-84726
-有线电视台   85094
-学工部（学生处）
-部长办公室   84624
-办公室 84702
-学籍管理办公室 84632
-84732
-档案室 84748
-行政楼物业
-物业办公室   84859
-物业监控室   82906
-
-
-Y 
-研究生院
-招生办公室   84721
-培养处办公室  85008
-85009
-党委研工部办公室    85029
-85032
-管理处办公室  85010
-学位办公室   85034
-85035
-专业学位管理办公室   84025
-教育资助管理办公室   85031
-综合管理办公室 85001
-85003
-    
-
-
-Z 
-政治系
-办公室 84001
-84002
-84003
-资环学院
-院办公室    84019
-84020
-84021
-84022
-植物与生态实验室    84034
-土壤实验室   84032
-实验中心办公室 83996
-数码互动实验室 84031
-创新实验室   84033
-中文系
-总支办公室   82717
-主任办公室   82718
-84871
-主任助理室   85082
-办公室 84874
-85172
-85084
-教务办公室   82713
-研究生工作室  85081
-研究生辅导员办公室   85083
-本科生辅导员办公室   84875
-84876
-85085
-哲学系
-辅导员办公室  82330
-教务办公室   82640
-84877
-组织部
-组织部办公室  84655
-84665
-84615
-84645
-        </pre>
+    <div class="item item-text-wrap" ng-bind-html="post.content">
     </div>
 </div>
 </ion-content>
