show loading message when download and upload

--- a/www/templates/clists.html
+++ b/www/templates/clists.html
@@ -12,7 +12,7 @@
                         <h2 class="ng-binding">{{a.name}}</h2>
                     </div>
                     <div class="row force-no-padding-top5">
-                        <p class="ng-binding">{{a.lecturer}}</p>
+                        <p class="ng-binding">{{a.serialno}} &nbsp; {{a.lecturer}}</p>
                     </div>
                 </div>
             </div>
